<resources>
    <string name="app_name">BioSecure</string>
    <string name="loginButton">Login</string>
    <string name="userTextField">Enter Username</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="label1">Enter your email address</string>
    <string name="register">Register</string>
    <string name="full_name">Enter full name</string>
    <string name="emailLabel">Enter email address</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_your_age">Enter your age</string>
    <string name="label2">Enter your credentials and biometric details</string>
    <string name="authsuccess">Authentication successful!</string>
    <string name="authfailed">Authentication failed!</string>
    <string name="userName">Full name:</string>
    <string name="userAge">Age:</string>
    <string name="userEmail">Email:</string>
    <string name="logoutButton">logout</string>
    <string name="welcomeHint">Welcome User</string>
</resources>