<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="15dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BioSecure"
        android:textSize="32sp"
        android:textColor="#00FF00"
        android:padding="10dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomeLabel"
        android:layout_marginTop="150dp"
        android:hint="@string/welcomeHint"
        android:textColorHint="@color/lime_green"
        android:textAlignment="center"
        android:padding="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:padding="10dp"
        android:hint="@string/userName"
        android:textColorHint="@color/lime_green"
        android:textColor="@color/lime_green"
        android:textAlignment="textStart" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userAge"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/userAge"
        android:textColorHint="@color/lime_green"
        android:textColor="@color/lime_green"
        android:textAlignment="textStart" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userEmail"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:hint="@string/userEmail"
        android:textColorHint="@color/lime_green"
        android:textColor="@color/lime_green"
        android:textAlignment="textStart" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoutButton"
        android:text="@string/logoutButton"
        android:textColor="#00FF00"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/black" />

</LinearLayout>