<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="30dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BioSecure"
        android:textSize="32sp"
        android:textColor="#00FF00"
        android:padding="10dp"
        android:layout_gravity="center"
        android:background="@drawable/border"/>

    <EditText
        android:id="@+id/userText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:background="@drawable/border"
        android:hint="@string/emailLabel"
        android:importantForAutofill="no"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#00FF00"
        android:textColorHint="#00FF00"
        android:textSize="13sp" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:background="@drawable/border"
        android:ems="10"
        android:hint="@string/enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="#00FF00"
        android:textColorHint="#00FF00"
        android:textSize="13sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/registerButton"
        android:text="@string/register"
        android:textColor="#00FF00"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:backgroundTint="@color/black" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginButton"
        android:text="@string/login"
        android:textColor="#00FF00"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="@color/black"/>


</LinearLayout>